[all] code clean up (GT)